
public static class StringConstants
{
    #region TAG_STRINGS
    public static string PLAYER_TAG = "Player";
    public static string GAME_CONTROLLER_TAG = "GameController";
    public static string GROUND_TAG = "Ground";
    public static string WALL_TAG = "Wall";
    public static string END_OF_PLATFORM_TAG = "End_Of_Platform";
    public static string CHECKPOINT_STRING = "Checkpoint";
    #endregion

    #region LAYER_STRINGS
    public static string DEFAULT_LAYER = "Default";
    public static string TRANSPARENT_FX_LAYER = "TransparentFX";
    public static string IGNORE_RAYCAST_LAYER = "Ignore Raycast";
    public static string SURFACE_LAYER = "Surface";
    public static string WATER_LAYER = "Water";
    public static string UI_LAYER = "UI";
    public static string ENEMY_LAYER = "Enemies";
    public static string PLAYER_PROJECTILE_LAYER = "PlayerProjectile";
    public static string ENEMY_PROJECTILE_LAYER = "EnemyProjectile";
    #endregion

    #region ANIMATION_TRIGGERS
    #region PLAYER_ANIMATIONS
    public static string PLAYER_RUN = "Run";
    public static string PLAYER_IDLE = "Idle";
    public static string COMBO_ATTACK_ONE = "ComboAttack1";
    public static string COMBO_ATTACK_TWO = "ComboAttack2";
    public static string COMBO_ATTACK_THREE = "ComboAttack3";
    #endregion
    #region MASK_ANIMATIONS
    public static string WAR_MASK = "WarMask";
    public static string NATURE_MASK = "NatureMask";
    #endregion
    #region RHINO_ENEMY_ANIMATIONS
    public static string RHINO_WALK_CYCLE = "Walk_Cycle";
    public static string RHINO_CHARGE = "Charge";
    public static string RHINO_COOL_DOWN = "Cool_Down";
    public static string RHINO_DEATH = "Death";
    public static string RHINO_PRE_CHARGE = "Pre_Charge";
    public static string RHINO_HEADBUTT = "Headbutt";
    #endregion
    #endregion

    #region SCENE_NAMES
    public static string NATURE_LEVEL = "NatureLevel";
    public static string WAR_LEVEL = "WarLevel";
    #endregion

    #region UI_STRINGS
    public static string AUDIO_SETTINGS = "audio settings";
    public static string VIDEO_SETTINGS = "video settings";
    public static string CONTROLS_SETTINGS = "controls settings";
    public static string ACCESSIBILITY_SETTINGS = "accessibility settings";
    #endregion 
}
